interpretor.output
Grammar

    0 $accept: start $end

    1 start: stmts

    2 stmts: stmts stmt
    3      | stmt

    4 stmt: var_declaration ';'
    5     | array_declaration ';'
    6     | const_declaration ';'
    7     | function_declaration
    8     | container_declaration
    9     | main_function

   10 main_function: VOID MAIN '(' ')' '{' fun_body '}'

   11 container_declaration: CONTAINER '{' container_body '}' IDENTIFIER ';'

   12 container_body: container_elements
   13               | container_body container_elements

   14 container_elements: var_declaration ';'
   15                   | function_declaration

   16 function_declaration: FUN return_type IDENTIFIER '(' fun_params ')' '{' fun_body '}'
   17                     | FUN return_type IDENTIFIER '(' ')' '{' fun_body '}'

   18 return_type: types
   19            | VOID

   20 fun_params: parameter
   21           | fun_params ',' parameter

   22 parameter: types IDENTIFIER

   23 types: INT
   24      | FLOAT
   25      | CHAR
   26      | STRING
   27      | BOOL

   28 fun_body: code_block
   29         | fun_body code_block

   30 code_block: var_declaration ';'
   31           | array_declaration ';'
   32           | array_assignment ';'
   33           | const_declaration ';'
   34           | call_function ';'
   35           | var_assignment ';'
   36           | container_assignment ';'
   37           | container_function ';'
   38           | if_statement
   39           | while_statement
   40           | for_statement

   41 code_block_list: code_block
   42                | code_block_list code_block

   43 if_statement: IF '(' expression ')' '{' code_block_list '}'
   44             | IF '(' expression ')' '{' code_block_list '}' ELSE '{' code_block_list '}'

   45 while_statement: WHILE '(' expression ')' '{' code_block_list '}'

   46 for_statement: FOR '(' var_assignment ';' expression ';' var_assignment ')' '{' code_block_list '}'

   47 var_assignment: IDENTIFIER '=' expression

   48 array_declaration: ARR types IDENTIFIER '[' INT_CONST ']' '=' '{' array_list '}'
   49                  | ARR types IDENTIFIER '[' INT_CONST ']'

   50 array_list: array_list_int
   51           | array_list_float
   52           | array_list_char
   53           | array_list_string
   54           | array_list_bool

   55 array_list_int: array_list_int ',' INT_CONST
   56               | INT_CONST

   57 array_list_float: array_list_float ',' FLOAT_CONST
   58                 | FLOAT_CONST

   59 array_list_char: array_list_char ',' CHAR_CONST
   60                | CHAR_CONST

   61 array_list_string: array_list_string ',' STR_CONST
   62                  | STR_CONST

   63 array_list_bool: array_list_bool ',' TRUE
   64                | array_list_bool ',' FALSE
   65                | TRUE
   66                | FALSE

   67 array_val: IDENTIFIER '[' INT_CONST ']'

   68 array_assignment: array_val '=' expression

   69 get_container_elem: IDENTIFIER ACCES IDENTIFIER

   70 container_assignment: get_container_elem '=' expression

   71 container_function: get_container_elem '(' call_params ')'

   72 var_declaration: VAR types IDENTIFIER
   73                | VAR types IDENTIFIER '=' expression

   74 const_declaration: CONST types IDENTIFIER '=' expression

   75 call_function: CALL IDENTIFIER '(' call_params ')'
   76              | CALL IDENTIFIER '(' ')'
   77              | CALL eval_function

   78 eval_function: EVAL '(' expression ')'

   79 call_params: call_param
   80            | call_params ',' call_param

   81 call_param: call_function
   82           | expression

   83 expression: IDENTIFIER
   84           | get_container_elem
   85           | array_val
   86           | INT_CONST
   87           | FLOAT_CONST
   88           | '(' expression ')'
   89           | expression '+' expression
   90           | expression '-' expression
   91           | expression '*' expression
   92           | expression '/' expression
   93           | expression '%' expression
   94           | '-' expression
   95           | TRUE
   96           | FALSE
   97           | expression LT expression
   98           | expression GT expression
   99           | expression LTE expression
  100           | expression GTE expression
  101           | expression EQUALITY expression
  102           | expression INEQUALITY expression
  103           | expression AND expression
  104           | expression OR expression
  105           | '!' expression
  106           | CHAR_CONST
  107           | STR_CONST
  108           | STRCAT '(' expression ',' expression ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 105
    '%' (37) 93
    '(' (40) 10 16 17 43 44 45 46 71 75 76 78 88 108
    ')' (41) 10 16 17 43 44 45 46 71 75 76 78 88 108
    '*' (42) 91
    '+' (43) 89
    ',' (44) 21 55 57 59 61 63 64 80 108
    '-' (45) 90 94
    '/' (47) 92
    ';' (59) 4 5 6 11 14 30 31 32 33 34 35 36 37 46
    '=' (61) 47 48 68 70 73 74
    '[' (91) 48 49 67
    ']' (93) 48 49 67
    '{' (123) 10 11 16 17 43 44 45 46 48
    '}' (125) 10 11 16 17 43 44 45 46 48
    error (256)
    CONTAINER (258) 11
    EVAL (259) 78
    CONST (260) 74
    FUN (261) 16 17
    VAR (262) 72 73
    CALL (263) 75 76 77
    IF (264) 43 44
    ELSE (265) 44
    WHILE (266) 45
    FOR (267) 46
    INT (268) 23
    FLOAT (269) 24
    CHAR (270) 25
    STRING (271) 26
    BOOL (272) 27
    VOID (273) 10 19
    ARR (274) 48 49
    MAIN (275) 10
    IDENTIFIER <varId> (276) 11 16 17 22 47 48 49 67 69 72 73 74 75 76 83
    INT_CONST <intVal> (277) 48 49 55 56 67 86
    FLOAT_CONST <floatVal> (278) 57 58 87
    CHAR_CONST <charVal> (279) 59 60 106
    STR_CONST <strVal> (280) 61 62 107
    TRUE <boolVal> (281) 63 65 95
    FALSE <boolVal> (282) 64 66 96
    AND (283) 103
    OR (284) 104
    EQUALITY (285) 101
    INEQUALITY (286) 102
    LT (287) 97
    GT (288) 98
    LTE (289) 99
    GTE (290) 100
    NEG (291)
    ACCES (292) 69
    THEN (293)
    STRCAT (294) 108


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    start (56)
        on left: 1
        on right: 0
    stmts <nodPtr> (57)
        on left: 2 3
        on right: 1 2
    stmt <nodPtr> (58)
        on left: 4 5 6 7 8 9
        on right: 2 3
    main_function <nodPtr> (59)
        on left: 10
        on right: 9
    container_declaration (60)
        on left: 11
        on right: 8
    container_body (61)
        on left: 12 13
        on right: 11 13
    container_elements (62)
        on left: 14 15
        on right: 12 13
    function_declaration (63)
        on left: 16 17
        on right: 7 15
    return_type (64)
        on left: 18 19
        on right: 16 17
    fun_params (65)
        on left: 20 21
        on right: 16 21
    parameter (66)
        on left: 22
        on right: 20 21
    types <Types> (67)
        on left: 23 24 25 26 27
        on right: 18 22 48 49 72 73 74
    fun_body <nodPtr> (68)
        on left: 28 29
        on right: 10 16 17 29
    code_block <nodPtr> (69)
        on left: 30 31 32 33 34 35 36 37 38 39 40
        on right: 28 29 41 42
    code_block_list <nodPtr> (70)
        on left: 41 42
        on right: 42 43 44 45 46
    if_statement <nodPtr> (71)
        on left: 43 44
        on right: 38
    while_statement <nodPtr> (72)
        on left: 45
        on right: 39
    for_statement <nodPtr> (73)
        on left: 46
        on right: 40
    var_assignment <nodPtr> (74)
        on left: 47
        on right: 35 46
    array_declaration <nodPtr> (75)
        on left: 48 49
        on right: 5 31
    array_list <nodPtr> (76)
        on left: 50 51 52 53 54
        on right: 48
    array_list_int (77)
        on left: 55 56
        on right: 50 55
    array_list_float (78)
        on left: 57 58
        on right: 51 57
    array_list_char (79)
        on left: 59 60
        on right: 52 59
    array_list_string (80)
        on left: 61 62
        on right: 53 61
    array_list_bool (81)
        on left: 63 64 65 66
        on right: 54 63 64
    array_val <nodPtr> (82)
        on left: 67
        on right: 68 85
    array_assignment <nodPtr> (83)
        on left: 68
        on right: 32
    get_container_elem (84)
        on left: 69
        on right: 70 71 84
    container_assignment <nodPtr> (85)
        on left: 70
        on right: 36
    container_function <nodPtr> (86)
        on left: 71
        on right: 37
    var_declaration <nodPtr> (87)
        on left: 72 73
        on right: 4 14 30
    const_declaration <nodPtr> (88)
        on left: 74
        on right: 6 33
    call_function <nodPtr> (89)
        on left: 75 76 77
        on right: 34 81
    eval_function <nodPtr> (90)
        on left: 78
        on right: 77
    call_params (91)
        on left: 79 80
        on right: 71 75 80
    call_param (92)
        on left: 81 82
        on right: 79 80
    expression <nodPtr> (93)
        on left: 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
        on right: 43 44 45 46 47 68 70 73 74 78 82 88 89 90 91 92 93 94 97 98 99 100 101 102 103 104 105 108


State 0

    0 $accept: . start $end

    CONTAINER  shift, and go to state 1
    CONST      shift, and go to state 2
    FUN        shift, and go to state 3
    VAR        shift, and go to state 4
    VOID       shift, and go to state 5
    ARR        shift, and go to state 6

    start                  go to state 7
    stmts                  go to state 8
    stmt                   go to state 9
    main_function          go to state 10
    container_declaration  go to state 11
    function_declaration   go to state 12
    array_declaration      go to state 13
    var_declaration        go to state 14
    const_declaration      go to state 15


State 1

   11 container_declaration: CONTAINER . '{' container_body '}' IDENTIFIER ';'

    '{'  shift, and go to state 16


State 2

   74 const_declaration: CONST . types IDENTIFIER '=' expression

    INT     shift, and go to state 17
    FLOAT   shift, and go to state 18
    CHAR    shift, and go to state 19
    STRING  shift, and go to state 20
    BOOL    shift, and go to state 21

    types  go to state 22


State 3

   16 function_declaration: FUN . return_type IDENTIFIER '(' fun_params ')' '{' fun_body '}'
   17                     | FUN . return_type IDENTIFIER '(' ')' '{' fun_body '}'

    INT     shift, and go to state 17
    FLOAT   shift, and go to state 18
    CHAR    shift, and go to state 19
    STRING  shift, and go to state 20
    BOOL    shift, and go to state 21
    VOID    shift, and go to state 23

    return_type  go to state 24
    types        go to state 25


State 4

   72 var_declaration: VAR . types IDENTIFIER
   73                | VAR . types IDENTIFIER '=' expression

    INT     shift, and go to state 17
    FLOAT   shift, and go to state 18
    CHAR    shift, and go to state 19
    STRING  shift, and go to state 20
    BOOL    shift, and go to state 21

    types  go to state 26


State 5

   10 main_function: VOID . MAIN '(' ')' '{' fun_body '}'

    MAIN  shift, and go to state 27


State 6

   48 array_declaration: ARR . types IDENTIFIER '[' INT_CONST ']' '=' '{' array_list '}'
   49                  | ARR . types IDENTIFIER '[' INT_CONST ']'

    INT     shift, and go to state 17
    FLOAT   shift, and go to state 18
    CHAR    shift, and go to state 19
    STRING  shift, and go to state 20
    BOOL    shift, and go to state 21

    types  go to state 28


State 7

    0 $accept: start . $end

    $end  shift, and go to state 29


State 8

    1 start: stmts .
    2 stmts: stmts . stmt

    CONTAINER  shift, and go to state 1
    CONST      shift, and go to state 2
    FUN        shift, and go to state 3
    VAR        shift, and go to state 4
    VOID       shift, and go to state 5
    ARR        shift, and go to state 6

    $default  reduce using rule 1 (start)

    stmt                   go to state 30
    main_function          go to state 10
    container_declaration  go to state 11
    function_declaration   go to state 12
    array_declaration      go to state 13
    var_declaration        go to state 14
    const_declaration      go to state 15


State 9

    3 stmts: stmt .

    $default  reduce using rule 3 (stmts)


State 10

    9 stmt: main_function .

    $default  reduce using rule 9 (stmt)


State 11

    8 stmt: container_declaration .

    $default  reduce using rule 8 (stmt)


State 12

    7 stmt: function_declaration .

    $default  reduce using rule 7 (stmt)


State 13

    5 stmt: array_declaration . ';'

    ';'  shift, and go to state 31


State 14

    4 stmt: var_declaration . ';'

    ';'  shift, and go to state 32


State 15

    6 stmt: const_declaration . ';'

    ';'  shift, and go to state 33


State 16

   11 container_declaration: CONTAINER '{' . container_body '}' IDENTIFIER ';'

    FUN  shift, and go to state 3
    VAR  shift, and go to state 4

    container_body        go to state 34
    container_elements    go to state 35
    function_declaration  go to state 36
    var_declaration       go to state 37


State 17

   23 types: INT .

    $default  reduce using rule 23 (types)


State 18

   24 types: FLOAT .

    $default  reduce using rule 24 (types)


State 19

   25 types: CHAR .

    $default  reduce using rule 25 (types)


State 20

   26 types: STRING .

    $default  reduce using rule 26 (types)


State 21

   27 types: BOOL .

    $default  reduce using rule 27 (types)


State 22

   74 const_declaration: CONST types . IDENTIFIER '=' expression

    IDENTIFIER  shift, and go to state 38


State 23

   19 return_type: VOID .

    $default  reduce using rule 19 (return_type)


State 24

   16 function_declaration: FUN return_type . IDENTIFIER '(' fun_params ')' '{' fun_body '}'
   17                     | FUN return_type . IDENTIFIER '(' ')' '{' fun_body '}'

    IDENTIFIER  shift, and go to state 39


State 25

   18 return_type: types .

    $default  reduce using rule 18 (return_type)


State 26

   72 var_declaration: VAR types . IDENTIFIER
   73                | VAR types . IDENTIFIER '=' expression

    IDENTIFIER  shift, and go to state 40


State 27

   10 main_function: VOID MAIN . '(' ')' '{' fun_body '}'

    '('  shift, and go to state 41


State 28

   48 array_declaration: ARR types . IDENTIFIER '[' INT_CONST ']' '=' '{' array_list '}'
   49                  | ARR types . IDENTIFIER '[' INT_CONST ']'

    IDENTIFIER  shift, and go to state 42


State 29

    0 $accept: start $end .

    $default  accept


State 30

    2 stmts: stmts stmt .

    $default  reduce using rule 2 (stmts)


State 31

    5 stmt: array_declaration ';' .

    $default  reduce using rule 5 (stmt)


State 32

    4 stmt: var_declaration ';' .

    $default  reduce using rule 4 (stmt)


State 33

    6 stmt: const_declaration ';' .

    $default  reduce using rule 6 (stmt)


State 34

   11 container_declaration: CONTAINER '{' container_body . '}' IDENTIFIER ';'
   13 container_body: container_body . container_elements

    FUN  shift, and go to state 3
    VAR  shift, and go to state 4
    '}'  shift, and go to state 43

    container_elements    go to state 44
    function_declaration  go to state 36
    var_declaration       go to state 37


State 35

   12 container_body: container_elements .

    $default  reduce using rule 12 (container_body)


State 36

   15 container_elements: function_declaration .

    $default  reduce using rule 15 (container_elements)


State 37

   14 container_elements: var_declaration . ';'

    ';'  shift, and go to state 45


State 38

   74 const_declaration: CONST types IDENTIFIER . '=' expression

    '='  shift, and go to state 46


State 39

   16 function_declaration: FUN return_type IDENTIFIER . '(' fun_params ')' '{' fun_body '}'
   17                     | FUN return_type IDENTIFIER . '(' ')' '{' fun_body '}'

    '('  shift, and go to state 47


State 40

   72 var_declaration: VAR types IDENTIFIER .
   73                | VAR types IDENTIFIER . '=' expression

    '='  shift, and go to state 48

    $default  reduce using rule 72 (var_declaration)


State 41

   10 main_function: VOID MAIN '(' . ')' '{' fun_body '}'

    ')'  shift, and go to state 49


State 42

   48 array_declaration: ARR types IDENTIFIER . '[' INT_CONST ']' '=' '{' array_list '}'
   49                  | ARR types IDENTIFIER . '[' INT_CONST ']'

    '['  shift, and go to state 50


State 43

   11 container_declaration: CONTAINER '{' container_body '}' . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 51


State 44

   13 container_body: container_body container_elements .

    $default  reduce using rule 13 (container_body)


State 45

   14 container_elements: var_declaration ';' .

    $default  reduce using rule 14 (container_elements)


State 46

   74 const_declaration: CONST types IDENTIFIER '=' . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 65


State 47

   16 function_declaration: FUN return_type IDENTIFIER '(' . fun_params ')' '{' fun_body '}'
   17                     | FUN return_type IDENTIFIER '(' . ')' '{' fun_body '}'

    INT     shift, and go to state 17
    FLOAT   shift, and go to state 18
    CHAR    shift, and go to state 19
    STRING  shift, and go to state 20
    BOOL    shift, and go to state 21
    ')'     shift, and go to state 66

    fun_params  go to state 67
    parameter   go to state 68
    types       go to state 69


State 48

   73 var_declaration: VAR types IDENTIFIER '=' . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 70


State 49

   10 main_function: VOID MAIN '(' ')' . '{' fun_body '}'

    '{'  shift, and go to state 71


State 50

   48 array_declaration: ARR types IDENTIFIER '[' . INT_CONST ']' '=' '{' array_list '}'
   49                  | ARR types IDENTIFIER '[' . INT_CONST ']'

    INT_CONST  shift, and go to state 72


State 51

   11 container_declaration: CONTAINER '{' container_body '}' IDENTIFIER . ';'

    ';'  shift, and go to state 73


State 52

   67 array_val: IDENTIFIER . '[' INT_CONST ']'
   69 get_container_elem: IDENTIFIER . ACCES IDENTIFIER
   83 expression: IDENTIFIER .

    ACCES  shift, and go to state 74
    '['    shift, and go to state 75

    $default  reduce using rule 83 (expression)


State 53

   86 expression: INT_CONST .

    $default  reduce using rule 86 (expression)


State 54

   87 expression: FLOAT_CONST .

    $default  reduce using rule 87 (expression)


State 55

  106 expression: CHAR_CONST .

    $default  reduce using rule 106 (expression)


State 56

  107 expression: STR_CONST .

    $default  reduce using rule 107 (expression)


State 57

   95 expression: TRUE .

    $default  reduce using rule 95 (expression)


State 58

   96 expression: FALSE .

    $default  reduce using rule 96 (expression)


State 59

   94 expression: '-' . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 76


State 60

  105 expression: '!' . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 77


State 61

   88 expression: '(' . expression ')'

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 78


State 62

  108 expression: STRCAT . '(' expression ',' expression ')'

    '('  shift, and go to state 79


State 63

   85 expression: array_val .

    $default  reduce using rule 85 (expression)


State 64

   84 expression: get_container_elem .

    $default  reduce using rule 84 (expression)


State 65

   74 const_declaration: CONST types IDENTIFIER '=' expression .
   89 expression: expression . '+' expression
   90           | expression . '-' expression
   91           | expression . '*' expression
   92           | expression . '/' expression
   93           | expression . '%' expression
   97           | expression . LT expression
   98           | expression . GT expression
   99           | expression . LTE expression
  100           | expression . GTE expression
  101           | expression . EQUALITY expression
  102           | expression . INEQUALITY expression
  103           | expression . AND expression
  104           | expression . OR expression

    AND         shift, and go to state 80
    OR          shift, and go to state 81
    EQUALITY    shift, and go to state 82
    INEQUALITY  shift, and go to state 83
    LT          shift, and go to state 84
    GT          shift, and go to state 85
    LTE         shift, and go to state 86
    GTE         shift, and go to state 87
    '+'         shift, and go to state 88
    '-'         shift, and go to state 89
    '*'         shift, and go to state 90
    '/'         shift, and go to state 91
    '%'         shift, and go to state 92

    $default  reduce using rule 74 (const_declaration)


State 66

   17 function_declaration: FUN return_type IDENTIFIER '(' ')' . '{' fun_body '}'

    '{'  shift, and go to state 93


State 67

   16 function_declaration: FUN return_type IDENTIFIER '(' fun_params . ')' '{' fun_body '}'
   21 fun_params: fun_params . ',' parameter

    ')'  shift, and go to state 94
    ','  shift, and go to state 95


State 68

   20 fun_params: parameter .

    $default  reduce using rule 20 (fun_params)


State 69

   22 parameter: types . IDENTIFIER

    IDENTIFIER  shift, and go to state 96


State 70

   73 var_declaration: VAR types IDENTIFIER '=' expression .
   89 expression: expression . '+' expression
   90           | expression . '-' expression
   91           | expression . '*' expression
   92           | expression . '/' expression
   93           | expression . '%' expression
   97           | expression . LT expression
   98           | expression . GT expression
   99           | expression . LTE expression
  100           | expression . GTE expression
  101           | expression . EQUALITY expression
  102           | expression . INEQUALITY expression
  103           | expression . AND expression
  104           | expression . OR expression

    AND         shift, and go to state 80
    OR          shift, and go to state 81
    EQUALITY    shift, and go to state 82
    INEQUALITY  shift, and go to state 83
    LT          shift, and go to state 84
    GT          shift, and go to state 85
    LTE         shift, and go to state 86
    GTE         shift, and go to state 87
    '+'         shift, and go to state 88
    '-'         shift, and go to state 89
    '*'         shift, and go to state 90
    '/'         shift, and go to state 91
    '%'         shift, and go to state 92

    $default  reduce using rule 73 (var_declaration)


State 71

   10 main_function: VOID MAIN '(' ')' '{' . fun_body '}'

    CONST       shift, and go to state 2
    VAR         shift, and go to state 4
    CALL        shift, and go to state 97
    IF          shift, and go to state 98
    WHILE       shift, and go to state 99
    FOR         shift, and go to state 100
    ARR         shift, and go to state 6
    IDENTIFIER  shift, and go to state 101

    fun_body              go to state 102
    code_block            go to state 103
    if_statement          go to state 104
    while_statement       go to state 105
    for_statement         go to state 106
    var_assignment        go to state 107
    array_declaration     go to state 108
    array_val             go to state 109
    array_assignment      go to state 110
    get_container_elem    go to state 111
    container_assignment  go to state 112
    container_function    go to state 113
    var_declaration       go to state 114
    const_declaration     go to state 115
    call_function         go to state 116


State 72

   48 array_declaration: ARR types IDENTIFIER '[' INT_CONST . ']' '=' '{' array_list '}'
   49                  | ARR types IDENTIFIER '[' INT_CONST . ']'

    ']'  shift, and go to state 117


State 73

   11 container_declaration: CONTAINER '{' container_body '}' IDENTIFIER ';' .

    $default  reduce using rule 11 (container_declaration)


State 74

   69 get_container_elem: IDENTIFIER ACCES . IDENTIFIER

    IDENTIFIER  shift, and go to state 118


State 75

   67 array_val: IDENTIFIER '[' . INT_CONST ']'

    INT_CONST  shift, and go to state 119


State 76

   89 expression: expression . '+' expression
   90           | expression . '-' expression
   91           | expression . '*' expression
   92           | expression . '/' expression
   93           | expression . '%' expression
   94           | '-' expression .
   97           | expression . LT expression
   98           | expression . GT expression
   99           | expression . LTE expression
  100           | expression . GTE expression
  101           | expression . EQUALITY expression
  102           | expression . INEQUALITY expression
  103           | expression . AND expression
  104           | expression . OR expression

    $default  reduce using rule 94 (expression)


State 77

   89 expression: expression . '+' expression
   90           | expression . '-' expression
   91           | expression . '*' expression
   92           | expression . '/' expression
   93           | expression . '%' expression
   97           | expression . LT expression
   98           | expression . GT expression
   99           | expression . LTE expression
  100           | expression . GTE expression
  101           | expression . EQUALITY expression
  102           | expression . INEQUALITY expression
  103           | expression . AND expression
  104           | expression . OR expression
  105           | '!' expression .

    $default  reduce using rule 105 (expression)


State 78

   88 expression: '(' expression . ')'
   89           | expression . '+' expression
   90           | expression . '-' expression
   91           | expression . '*' expression
   92           | expression . '/' expression
   93           | expression . '%' expression
   97           | expression . LT expression
   98           | expression . GT expression
   99           | expression . LTE expression
  100           | expression . GTE expression
  101           | expression . EQUALITY expression
  102           | expression . INEQUALITY expression
  103           | expression . AND expression
  104           | expression . OR expression

    AND         shift, and go to state 80
    OR          shift, and go to state 81
    EQUALITY    shift, and go to state 82
    INEQUALITY  shift, and go to state 83
    LT          shift, and go to state 84
    GT          shift, and go to state 85
    LTE         shift, and go to state 86
    GTE         shift, and go to state 87
    '+'         shift, and go to state 88
    '-'         shift, and go to state 89
    '*'         shift, and go to state 90
    '/'         shift, and go to state 91
    '%'         shift, and go to state 92
    ')'         shift, and go to state 120


State 79

  108 expression: STRCAT '(' . expression ',' expression ')'

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 121


State 80

  103 expression: expression AND . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 122


State 81

  104 expression: expression OR . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 123


State 82

  101 expression: expression EQUALITY . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 124


State 83

  102 expression: expression INEQUALITY . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 125


State 84

   97 expression: expression LT . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 126


State 85

   98 expression: expression GT . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 127


State 86

   99 expression: expression LTE . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 128


State 87

  100 expression: expression GTE . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 129


State 88

   89 expression: expression '+' . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 130


State 89

   90 expression: expression '-' . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 131


State 90

   91 expression: expression '*' . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 132


State 91

   92 expression: expression '/' . expression

    IDENTIFIER   shift, and go to state 52
    INT_CONST    shift, and go to state 53
    FLOAT_CONST  shift, and go to state 54
    CHAR_CONST   shift, and go to state 55
    STR_CONST    shift, and go to state 56
    TRUE         shift, and go to state 57
    FALSE        shift, and go to state 58
    '-'          shift, and go to state 59
    '!'          shift, and go to state 60
    '('          shift, and go to state 61
    STRCAT       shift, and go to state 62

    array_val           go to state 63
    get_container_elem  go to state 64
    expression          go to state 133


State 92

   93 expression: expression '%' . expression
